Sun Apr  3 22:51:48 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.h, fairy.c: rb_fairy_*f: 追加(まだ不完全)
	* p-xgroup-by.c: PXGroupBy::PostFilter,
	  PXGroupBy::MergeSortBuffer, PXGroupBy::CachedBuffer追加(まだ不完全)
	* group-by.rb, c-group-by.rb, p-group-by.rb: 上記の対応に伴う変更
	* string-buffer.c: 初期化, 型の不一致等の修正

Fri Apr  1 23:48:56 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* p-xgroup-by.c: [BUG#303]対応
	* block-source.rb: 下記対応がまだ不十分だった...

Fri Apr  1 15:33:17 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* block-source.rb: 下記の対応が十分でなかった.

Fri Apr  1 13:42:14 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* block-source.rb: 例外発生時のバックトレース置き換えでまずいとこ
	  ろがあった.

Mon Mar 28 23:20:33 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* p-xgroup-by.c: xgroup_byでブロックを評価するのを忘れていた.
	* p-basic-group-by.rb: 上記の対応で修正

Mon Mar 28 20:10:25 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.h: C-API宣言抜け
	* p-xgroup-by.c: postqueuing_policyがうまく設定できていなかった.

Mon Mar 28 18:22:06 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* string-buffer.c: StringBuffer::new(array)追加.  
	  rb_fairy_string_buffer_new2追加. rb_fairy_string_buffer_marshal_dump,
	rb_fairy_string_buffer_marshal_load: 完成

Sun Mar 27 23:51:05 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.h, fixnum-buffer.c: C-API
	  rb_fairy_fixnum_buffer_each_callback追加
	* fixnum-buffer.c: rb_fairy_fixnum_buffer_newで initalizeを呼んで
	  いなかった.
	* string-buffer.c: "\n"ターミネートから, fixnum-bufferを用いて文字
	  列長を表すように変更した.

Sat Mar 26 15:35:09 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.c, fairy.h: rb_fairy_processor_def_export2 追加
	* fairy.c, fairy.h: FixnumBuffer対応
	* p-xgroup-by.c: xthread.hインクルード忘れ
	* xthread.h: 最新版に更新

Thu Mar 24 18:27:13 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.c, fairy.h: 宣言が不適切だった.
	* xmarshaled-queue.c: rb_fairy_xmarshaled_queue_str_push で ulong
	 とlongの比較をしていた.

Thu Mar 24 14:19:33 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* p-sort.rb, p-injext.rb: [BUG#302]対応
