@@ -1,3 +1,8 @@
+Mon Apr  4 22:07:48 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>
+
+	* p-xgroup-by.c: PXGroupBy::PostFilter,
+	  PXGroupBy::MergeSortBuffer, PXGroupBy::CachedBuffer追加(完全版)
+
 Sun Apr  3 22:51:48 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>
 
 	* fairy.h, fairy.c: rb_fairy_*f: 追加(まだ不完全)
